# EasyAIConfig

./: .gitignore  README.md  edit-tool-test.txt  package-lock.json  package.json  tmp-edit-120-demo.txt  tmp-edit-demo.txt
.github/workflows/: desktop-release.yml  publish.yml  release.yml
docs/: config-editor-research-report.md
public/: app.js  config-store-engine.js  config-store-guides-codex.js  config-store-guides-openclaw.js  config-store-guides.js  config-store-recipes-codex.js  config-store-recipes-openclaw-channels.js  config-store-recipes-openclaw-providers.js  config-store-recipes-openclaw-runtime.js  config-store-recipes-openclaw-system.js  config-store-recipes-openclaw.js  config-store-recipes.js  index.html  styles.css
src/: server.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  claudecode_oauth_profiles.rs  codex.rs  config.rs  lib.rs  main.rs  network.rs  oauth_profiles.rs  processes.rs  routes.rs  shell_integration.rs  terminal.rs  updater.rs  usage_stats.rs
src/lib/: config-store.js  provider-check.js
