[package]
name = "easy_ai_config"
version = "1.0.16"
description = "EasyAIConfig desktop app"
authors = ["EasyAIConfig Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "easy_ai_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tokio = { version = "1", features = ["rt"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
toml = "0.8"
url = "2"
which = "8"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
